labour/test/invalid/invalid_rotation_out_of_range.labour
// INVALID (rule 14): a rotation must be between 0 and 359, but hold "0001"
// uses rotation 360.
bouldering_wall "BadRotationWall" {
  routes [
    bouldering_route "overrotated" {
      grade: "5A",
      grid_base_point { x: 0, y: 0 },
      holds ["0001", "0002"]
    }
  ],
  volumes [
    circle {
      pos: { x: 50, y: 50 },
      depth: 10,
      radius: 30,
      front_holds [
        hold "0001" {
          pos: { x: 0, y: 0 },
          shape: "1",
          colours [ red ],
          rotation: 360,
          start_hold: 1
        },
        hold "0002" {
          pos: { x: 5, y: 5 },
          shape: "1",
          colours [ red ]
        }
      ]
    }
  ]
}
